# python-poetry-hello

./: README.md
.devcontainer/: devcontainer.json
.devcontainer/scripts/: postCreate.sh
.github/workflows/: ci.yml  commitmsg-conform.yml  markdown-lint.yml
hello-world/: pyproject.toml
hello-world/hello_world/: main.py
hello-world/hello_world/tests/: test_hello_world.py
